--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@
 *.exe
 *.out
 *.app
+Android App on Pulse meter/a.apk
+Android App on Pulse meter/Android-BLE-Library/
+Android App on Pulse meter/blu/blu.ino
+Android App on Pulse meter/app-debug.apk
+Android App on Pulse meter/blu_new/blu_new.ino
+Android App on Pulse meter/blue/blue.ino
+Android App on Pulse meter/app-debug.apk
+Android App on Pulse meter/app-debug.apk
+Android App on Pulse meter/blue/blue.ino
+Android App on Pulse meter/connectivity-samples/
+Android App on Pulse meter/IITSDNS/
+Android App on Pulse meter/IITSDNS_V2.zip
+Android App on Pulse meter/IITSDNS_V2/
+Android App on Pulse meter/image.png
+Android App on Pulse meter/Project_code_01/Project_code_01.ino
+Android App on Pulse meter/Video on App.mp4
+Android App on Pulse meter/blue/blue.ino
