--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,36 @@ Android App on Pulse meter/image.png
 Android App on Pulse meter/Project_code_01/Project_code_01.ino
 Android App on Pulse meter/Video on App.mp4
 Android App on Pulse meter/blue/blue.ino
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/DS3231.h
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/examples/DS3231_oscillator_test/DS3231_oscillator_test.pde
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/examples/DS3231_set/DS3231_set.pde
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/examples/DS3231_test/DS3231_test.pde
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/examples/echo_time/echo_time.pde
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/examples/now/now.pde
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/keywords.txt
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/README.md
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/LICENSE
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/.github/FUNDING.yml
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/examples/PinChangeInterrupt_HowItWorks/PinChangeInterrupt_HowItWorks.ino
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/examples/PinChangeInterrupt_Led/PinChangeInterrupt_Led.ino
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/examples/PinChangeInterrupt_TickTock/PinChangeInterrupt_TickTock.ino
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/header.png
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/keywords.txt
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/LICENSE
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/Readme.md
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterrupt.cpp
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterrupt.h
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterrupt1.cpp
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterrupt2.cpp
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterrupt3.cpp
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterruptBoards.h
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterrupt0.cpp
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterruptPins.h
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/src/PinChangeInterruptSettings.h
+Arduino Clock with Neopixel strips/reworkArduinoCode2/neostripcodepinout.pdf
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/library.properties
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/examples/PinChangeInterrupt_LowLevel/PinChangeInterrupt_LowLevel.ino
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/PinChangeInterrupt-master/.editorconfig
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/library.properties
+Arduino Clock with Neopixel strips/reworkArduinoCode2/Libraries/DS3231/examples/set_echo/set_echo.pde
+Arduino Clock with Neopixel strips/reworkArduinoCode2/POPO_NEW2/POPO_NEW2.ino
